--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run checks
-        run: npm run test
+      # - name: Run checks
+      #   run: npm run test
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
